# AndroidNDIMonitor

./: .gitignore  CLAUDE.md  README.md  VIDEO_STREAMING_IMPLEMENTATION.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Processing.NDI.Lib.h  ndi_discovery.cpp  ndi_discovery.h  ndi_jni_wrapper.cpp  ndi_receiver.cpp  ndi_receiver.h
app/src/main/java/org/tpeyh/androidndimonitor/: MainActivity.kt
app/src/main/java/org/tpeyh/androidndimonitor/ndi/: ConnectionStatus.kt  NDIDiscoveryManager.kt  NDIReceiver.kt  NDISource.kt  NDISourceStatus.kt  NDIVideoPlayer.kt
app/src/main/java/org/tpeyh/androidndimonitor/ui/: NDISourceAdapter.kt  NDISourceBrowseFragment.kt  VideoPlayerActivity.kt  VideoRenderView.kt
app/src/main/res/drawable/: action_card_background.xml  connection_status_indicator.xml  empty_state_background.xml  ic_close.xml  ic_diagnostic.xml  ic_error.xml  ic_refresh.xml  ic_search.xml  ic_settings.xml  ndi_source_card_background.xml  ndi_source_icon.xml  ndi_type_badge.xml  source_status_indicator.xml  stream_status_indicator.xml  tv_button_background.xml
app/src/main/res/layout/: action_item.xml  activity_main.xml  activity_video_player.xml  empty_state_item.xml  fragment_ndi_source_browse.xml  fragment_video_player.xml  ndi_source_card.xml  ndi_source_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/org/tpeyh/androidndimonitor/: NDIDataModelsTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
